--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "less-loader": "^4.1.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
