--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "webpack-dev-server --open",
-    "buildbeta": "set type=buildbeta&webpack",
-    "build": "set type=build&webpack"
+    "buildbeta": "set type=buildbeta&webpack --watch",
+    "build": "set type=build&webpack --watch"
   },
   "author": "zhang",
   "license": "ISC",
